--- a/web/index.html
+++ b/web/index.html
@@ -2,11 +2,22 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/frontier.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/frontier.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontier</title>
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rye&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body
+    class="bg-background-50 bg-icons bg-center bg-cover bg-repeat w-full min-h-[100vh] font-body"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
