--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontier</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Rye&display=swap"
@@ -16,7 +18,7 @@
     />
   </head>
   <body
-    class="bg-background-950 bg-icons bg-center bg-cover bg-repeat w-full min-h-[100vh] font-body"
+    class="bg-background-950 bg-icons bg-center bg-cover bg-repeat w-full min-h-[100vh] font-body text-paragraph-50"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
