feat: modal composition finish

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,9 @@
   <body
     class="bg-background-950 bg-icons bg-center bg-cover bg-repeat w-full min-h-[100vh] font-body text-paragraph-50"
   >
+    <em
+      class="bg-noises bg-center bg-cover bg-repeat w-full h-[100vh] fixed z-[9999] pointer-events-none"
+    ></em>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
